--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Go Vegan right now
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Go Vegan now</title>
+    
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <head>Vegan right now</head> 
+</body>
+</html>
+
+
