--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head>Vegan right now</head> 
+    <!-- <head>Vegan right now</head>  -->
 </body>
 </html>
 
