backround image play

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Go Vegan now</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+  <div >
+    <div class="data-info" style="background-image: url('go-vegan.jpg');">
+
+        </div>
+
+  </div>
     
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- <head>Vegan right now</head>  -->
-</body>
-</html>
-
-
+  </body>
+   
+ </html>
