made image resizable

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-  <div >
-    <div class="data-info" style="background-image: url('go-vegan.jpg');">
+  <div class="data-info">
+   
+    <div class="center-fit">
 
-        </div>
+    </div>
 
   </div>
     
